Refactor: Entfernt eine konkrete mm→ocl Abhängigkeit durch DIP. Vorbereitender Schritt zur Reduktion zyklischer Abhängigkeiten.
- Entkoppelt `MClassInvariant` von `org.tzi.use.uml.ocl.expr.Expression` durch Nutzung des neuen API-Interfaces `org.tzi.use.uml.api.IExpression`.
- Führt `IExpression` als schlanke Abstraktion für OCL-Expressions ein (Bool-Typ-Prüfung, Pre-State-Erkennung, String-Repräsentation) und lässt `org.tzi.use.uml.ocl.expr.Expression` dieses Interface implementieren.
- Abstrahiert `IInvariantExpressionFactory` in `org.tzi.use.uml.api`, so dass die Factory-Signatur nur noch mit `IExpression` und einfachen Parametern arbeitet und keine mm/ocl-Typen (`MClassifier`, `VarDeclList`) mehr aus der API-Schicht referenziert.
- Passt `MClassInvariant` so an, dass der Invarianten-Body und die expandierte Invariante als `IExpression` gehalten werden und die Erzeugung von expanded/violating/satisfying-Expressions über `IInvariantExpressionFactory` erfolgt.
- Aktualisiert `ModelFactory` und `GeneratorModelFactory`, um `MClassInvariant` mit `IExpression` und einer `OclInvariantExpressionFactory` zu erzeugen, statt direkt vom OCL-Expression-Typ abzuhängen.
- Passt Hilfsklassen im mm-/Analyse-/Generator-Umfeld (`MMPrintVisitor`, `CoverageAnalyzer`, `ASTGBarrierInvariant`, `GChecker`) an die neue IExpression-basierte API an und verwendet explizite Casts auf `Expression` nur dort, wo OCL-spezifische Visitor oder der Evaluator benötigt werden.
- Reduziert die von ArchUnit gemeldeten mm→ocl-Dependencies im Slice `mm` (z. B. von 221 auf 192) und entfernt zusätzliche Zyklen, die zuvor durch die Factory-Signatur in der API-Schicht entstanden sind, als vorbereitenden Schritt zur weiteren Reduktion zyklischer Abhängigkeiten.